--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movieinfo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sugvr.github.io/MovieData/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -16,7 +17,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -r git@github.com:sugvr/MovieData.git"
+
   },
   "eslintConfig": {
     "extends": [
